@@ -5,12 +5,15 @@
 Second version, with added quality of life features and general radio controls using soupySDR.
 
 ### Added
-- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x, i, o.
+- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x, i, o, z.
 - Added attack/decay of spectrum values
 - Added modular parse/input modules, updated readme
 - Added phosphor effect in spectrum
 - Added iqfile mode and example
 - Added SNR calculation
+
+### Changed
+- Fixed correct scaling, fft/fft_length
 
 TODO:
 - Added animation symbol and color solution, highlight of data derivate
